--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "redux": "^4.2.1",
     "redux-form": "^8.3.10",
     "redux-thunk": "^2.4.2",
+    "reselect": "^5.0.1",
     "sass": "^1.66.1",
     "web-vitals": "^2.1.4"
   },
